--- a/package.json
+++ b/package.json
@@ -29,12 +29,18 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.36",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "husky": "^9.0.11",
+    "ts-jest": "^29.1.4",
     "typescript": "^5"
   }
 }
