--- a/package.json
+++ b/package.json
@@ -20,13 +20,23 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.19",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.7.2",
+    "bun": "^1.1.10",
+    "clsx": "^2.1.1",
+    "emotion": "^11.0.0",
     "googleapis": "^137.1.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-transition-group": "^4.4.5",
+    "supabase": "^1.172.2"
   },
   "devDependencies": {
     "@swc/jest": "^0.2.36",
