--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/material": "^5.15.19",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/gapi": "^0.0.47",
     "axios": "^1.7.2",
     "bun": "^1.1.10",
     "clsx": "^2.1.1",
