--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "clean": "bun pm cache rm && rm -rf .next",
     "clean:all": "rm -rf node_modules & rm bun.lock* & bun clean",
     "docs": "typedoc",
@@ -27,16 +27,22 @@
     "@mui/material": "^5.15.19",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/cookie": "^0.6.0",
     "@types/gapi": "^0.0.47",
     "axios": "^1.7.2",
     "bun": "^1.1.10",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
     "emotion": "^11.0.0",
+    "express": "^4.19.2",
     "googleapis": "^137.1.0",
+    "net": "^1.0.2",
     "next": "14.2.3",
+    "oauth2-client": "^0.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-transition-group": "^4.4.5",
+    "simple-oauth2": "^5.0.1",
     "supabase": "^1.172.2"
   },
   "devDependencies": {
