--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie": "^0.6.0",
     "emotion": "^11.0.0",
     "express": "^4.19.2",
+    "google-spreadsheet": "^4.1.2",
     "googleapis": "^137.1.0",
     "net": "^1.0.2",
     "next": "14.2.3",
